add get user API
